feat: Use placeholder for username in pdf path

--- a/db/app_path.json
+++ b/db/app_path.json
@@ -16,7 +16,7 @@
 	},
 	"pdf": {
 	  "ext": ["pdf"],
-	  "path": "C:\\Users\\Abdul\\AppData\\Local\\Kingsoft\\WPS Office\\12.2.0.20795\\office6\\wpspdf.exe",
+	  "path": "C:\\Users\\USERNAME_PLACEHOLDER\\AppData\\Local\\Kingsoft\\WPS Office\\12.2.0.21179\\office6\\wpspdf.exe",
 	  "ico": "pdf.ico"
 	},
 	"text": {
